package actividad1;

import actividad1.ui.CLI;

public class Main {
    public static void main(String[] args) {
        CLI interfaz = new CLI();
        interfaz.iniciar();
    }
}
