@startuml LamborghiniSalesSystem

!theme default
skinparam classBackgroundColor #E1F5FE
skinparam classBorderColor #0277BD
skinparam arrowColor #0277BD

package "edu.divana.rojas.model" {
    class Auto {
        - id: int
        - modelo: String
        - marca: String
        - precio: double
        - color: String
        - año: int
        - motor: String
        - potencia: String
        - velocidadMax: int
        - descripcion: String
        --
        + getId(): int
        + getModelo(): String
        + getPrecio(): double
        + getVelocidadMax(): int
        + toString(): String
    }

    class Cliente {
        - nombre: String
        - apellido: String
        - telefono: String
        - email: String
        - cedula: String
        --
        + getNombre(): String
        + getApellido(): String
        + getNombreCompleto(): String
        + getTelefono(): String
        + getEmail(): String
    }

    class Venta {
        - idVenta: int
        - cliente: Cliente
        - autos: final List<Auto>
        - fecha: final LocalDateTime
        - total: double
        --
        + getIdVenta(): int
        + getCliente(): Cliente
        + getAutos(): List<Auto>
        + agregarAuto(Auto): void
        + eliminarAuto(int): void
        + getFecha(): LocalDateTime
        + getTotal(): double
    }
}

package "edu.divana.rojas.repository" {
    class AutoRepository {
        - autos: final List<Auto>
        --
        + obtenerTodos(): List<Auto>
        + obtenerPorId(int): Auto
        + agregarAuto(Auto): void
        + eliminarAuto(int): void
        + obtenerCantidad(): int
        - inicializarCatalogo(): void
    }

    class VentaRepository {
        - ventas: final List<Venta>
        - contadorVentas: int
        --
        + guardarVenta(Venta): void
        + obtenerTodas(): List<Venta>
        + obtenerPorId(int): Venta
        + obtenerCantidad(): int
    }
}

package "edu.divana.rojas.process.ventas" {
    class VentaProcess {
        - ventaRepository: final VentaRepository
        - ventaActual: Venta
        --
        + iniciarVenta(Cliente): void
        + agregarAutoAVenta(Auto): void
        + eliminarAutoDeVenta(int): void
        + obtenerVentaActual(): Venta
        + finalizarVenta(): void
        + cancelarVenta(): void
    }
}

package "edu.divana.rojas.process.reportes" {
    class ReporteVentasProcess {
        --
        + generarTicketVenta(Venta): void
        + mostrarResumenVenta(Venta): void
        + generarReporteVentas(List<Venta>): void
    }
}

package "edu.divana.rojas.ui" {
    class CLI {
        - scanner: final Scanner
        - autoRepository: final AutoRepository
        - ventaRepository: final VentaRepository
        - ventaProcess: final VentaProcess
        - reporteProcess: final ReporteVentasProcess
        --
        + iniciar(): void
        - mostrarMenuPrincipal(): void
        - procesarNuevaVenta(): void
        - mostrarCatalogo(): void
        - mostrarTodasLasVentas(): void
        - capturarDatosCliente(): Cliente
        - leerOpcion(): int
        - leerNumero(): int
    }
}

package "edu.divana.rojas.utils" {
    class FechaUtil {
        --
        + {static} formatoCompleto(LocalDateTime): String
        + {static} formatoFecha(LocalDateTime): String
        + {static} formatoHora(LocalDateTime): String
    }
}

package "edu.divana.rojas" {
    class Main {
        --
        + {static} main(String[]): void
    }
}

' Relaciones
Venta "contiene" *-- "1..n" Auto
Venta "registra" *-- "1" Cliente
AutoRepository "gestiona" *-- "0..n" Auto
VentaRepository "almacena" *-- "0..n" Venta

VentaProcess --> VentaRepository : usa
VentaProcess --> Venta : crea
VentaProcess --> Cliente : procesa
VentaProcess --> Auto : agrega

CLI --> AutoRepository : usa
CLI --> VentaRepository : usa
CLI --> VentaProcess : controla
CLI --> ReporteVentasProcess : usa

ReporteVentasProcess --> Venta : imprime
ReporteVentasProcess --> Auto : muestra
ReporteVentasProcess --> FechaUtil : formatea

Main --> CLI : inicia

@enduml
